# sf-agentbench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sf-agentbench.yaml  sf-agentbench.yaml.example
docs/benchmark-reports/: salesforce-ai-benchmark-report-2026-01-24.md  salesforce-ai-benchmark-report-2026-01.md
docs/data/: README.md  salesforce_admin_test_bank.json  salesforce_developer_test_bank.json  test_bank_schema.json
docs/development/: Salesforce AI Benchmark Design.md
rubrics/: qa_accuracy.yaml  salesforce_best_practices.yaml  security_audit.yaml
src/sf_agentbench/: __init__.py  cli.py  config.py  logging.py  models.py
src/sf_agentbench/aci/: __init__.py  analysis.py  apex.py  base.py  data.py  deploy.py  org.py
src/sf_agentbench/agents/: __init__.py  auth.py  base.py  claude.py  cli_runner.py  factory.py  gemini.py  kimi.py  openai.py
src/sf_agentbench/domain/: __init__.py  costs.py  metrics.py  models.py
src/sf_agentbench/evaluators/: __init__.py  deployment.py  functional.py  metadata_diff.py  pipeline.py  rubric.py  static_analysis.py
src/sf_agentbench/events/: __init__.py  bus.py  shared.py  types.py
src/sf_agentbench/executors/: __init__.py  base.py  coding_executor.py  qa_executor.py  validator.py
src/sf_agentbench/harness/: __init__.py  org_manager.py  runner.py  task_loader.py
src/sf_agentbench/judges/: __init__.py  base.py  claude_judge.py  consensus.py  gemini_judge.py  logging.py
src/sf_agentbench/qa/: __init__.py  loader.py  runner.py  storage.py
src/sf_agentbench/repl/: __init__.py  commands.py  console.py  renderer.py
src/sf_agentbench/reports/: __init__.py  comparison.py  generator.py
src/sf_agentbench/storage/: __init__.py  models.py  store.py  unified.py
src/sf_agentbench/tui/: __init__.py  app.py
src/sf_agentbench/tui/screens/: __init__.py  config.py  dashboard.py  results.py  run.py  tasks.py
src/sf_agentbench/web/: __init__.py  app.py  schemas.py
src/sf_agentbench/web/routes/: __init__.py  prompt_runner.py  qa.py  runs.py  tasks.py  ws.py
src/sf_agentbench/workers/: __init__.py  base.py  pool.py  scheduler.py
tasks/tier-1/lead-scoring-validation/: README.md  task.yaml
tasks/tier-1/lead-scoring-validation/config/: project-scratch-def.json
tasks/tier-1/lead-scoring-validation/force-app/main/default/classes/: LeadScoringTest.cls
tasks/tier-1/lead-scoring-validation/force-app/main/default/flows/: Lead_Scoring.flow  Lead_Scoring_Flow.flow-meta.xml  Lead_Scoring_Trigger.flow
tasks/tier-1/lead-scoring-validation/force-app/main/default/objects/Lead/fields/: Annual_Revenue__c.field-meta.xml  Lead_Score__c.field-meta.xml
tasks/tier-2/account-territory-trigger/: README.md  sfdx-project.json  task.yaml
tasks/tier-2/account-territory-trigger/config/: project-scratch-def.json
tasks/tier-2/account-territory-trigger/force-app/main/default/classes/: AccountTerritoryHandler.cls  AccountTerritoryTriggerTest.cls
tasks/tier-2/account-territory-trigger/force-app/main/default/triggers/: AccountTerritoryTrigger.trigger
tasks/tier-2/case-escalation-flow/: README.md  sfdx-project.json  task.yaml
tasks/tier-2/case-escalation-flow/config/: project-scratch-def.json
tasks/tier-2/case-escalation-flow/force-app/main/default/classes/: CaseEscalationService.cls  CaseEscalationTest.cls
tasks/tier-2/opportunity-discount-calculator/: README.md  sfdx-project.json  task.yaml
tasks/tier-2/opportunity-discount-calculator/config/: project-scratch-def.json
tasks/tier-2/opportunity-discount-calculator/force-app/main/default/classes/: OpportunityDiscountCalculator.cls  OpportunityDiscountCalculatorTest.cls
tests/: __init__.py  conftest.py  test_aci.py  test_config.py  test_models.py
tests/e2e/: __init__.py  test_runner.py
tests/fixtures/expected_results/: judge_good_code.json  qa_answers.json
tests/fixtures/qa/: mini_test_bank.json
tests/fixtures/rubrics/: test_rubric.yaml
tests/fixtures/sample_code/: bad_apex.cls  edge_cases.cls  good_apex.cls
web/: README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  main.tsx
web/src/components/: Layout.tsx
web/src/hooks/: useTheme.ts  useWebSocket.ts
web/src/lib/: api.ts  utils.ts
web/src/pages/: Comparison.tsx  Dashboard.tsx  LiveMonitor.tsx  PromptRunner.tsx  QABrowser.tsx  QARunDetail.tsx  RunBrowser.tsx  RunDetail.tsx  RunLauncher.tsx  index.ts
web/src/types/: api.ts
(+6 files in other folders)
