[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sf-agentbench"
version = "0.1.0"
description = "A specialized benchmarking framework for evaluating AI agents on Salesforce development"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "SF-AgentBench Contributors" }
]
keywords = [
    "salesforce",
    "benchmark",
    "ai-agents",
    "llm",
    "evaluation"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "deepdiff>=6.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
sf-agentbench = "sf_agentbench.cli:main"

[project.urls]
Homepage = "https://github.com/bhanudas/sf-agentbench"
Documentation = "https://github.com/bhanudas/sf-agentbench#readme"
Repository = "https://github.com/bhanudas/sf-agentbench"
Issues = "https://github.com/bhanudas/sf-agentbench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sf_agentbench"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
